--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,10 @@
         "tsx": "never",
         "css": "always"
       }
+    ],
+    "no-use-before-define": [
+      "error",
+      { "functions": false, "classes": true, "variables": true }
     ]
   }
 }
