--- a/package.json
+++ b/package.json
@@ -10,13 +10,11 @@
   "dependencies": {
     "next": "^13",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "three": "^0.143.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^18.6.3",
     "@types/react": "^18.0.15",
-    "@types/three": "^0.143.0",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
     "eslint": "^8.20.0",
